* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 3.0.0-3
- migration to simplib and simpcat (lib/ only)

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-2
- Changed puppet-server requirement to puppet

* Sun Jun 22 2014 Kendall Moore <kmoore@keywcorp.com> - 3.0.0-1
- Removed MD5 file checksums for FIPS compliance.

* Thu Jun 19 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-1
- Updated to not cast lpattern to an Array in tcpwrappers.allow.erb
  for compatibility with Ruby 2.

* Wed Apr 30 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-0
- Updated to use an array for the allow and to use the new ipaddresses function
  in common to provide all local addresses to the initial line.

* Thu Jan 09 2014 Nick Markowski <nmarkowski@keywcorp.com> - 2.1.0-0
- Updated module for puppet3/hiera compatibility, and optimized code for lint tests,
  and puppet-rspec.
- Removed tcpwrappers::tcpwrappers_allow

* Tue Oct 08 2013 Kendall Moore <kmoore@keywcorp.com> - 2.0.0-8
- Updated all erb templates to properly scope variables.

* Fri Aug 02 2013 Kendall Moore <kmoore@keywcorp.com> -2.0.0-7
- Updated the tcpwrappers.allow template because function calls require
  an argument of an array rather than allowing for single string arguments.

* Wed Apr 10 2013 Maintenance
2.0.0-6
- Added 127.0.0.1 to the list of always allowed hosts. Apparently, there was a
  bug in the way that NFS interacts with tcpwrappers that can occasionally fail
  if this isn't in place. Honestly, I can't figure out why but it works.

* Tue Jan 15 2013 Maintenance
2.0.0-5
- Created a Cucumber test which adds a tcpwrapper for nscd and checks
  /etc/hosts.allow to ensure that an entry is there to reflect the change.

* Thu Jun 07 2012 Maintenance
2.0.0-4
- Ensure that Arrays in templates are flattened.
- Call facts as instance variables.
- Moved mit-tests to /usr/share/simp...
- Converted the internal nets2ddq code to use the 'common' function.