@@ -1,6 +1,6 @@
 {
   "name": "simp-tcpwrappers",
-  "version": "4.1.1",
+  "version": "5.0.0",
   "author": "simp",
   "summary": "manages /etc/hosts.allow (/etc/hosts.deny is ALL:ALL by default)",
   "license": "Apache-2.0",
@@ -13,12 +13,20 @@
   ],
   "dependencies": [
     {
+      "name": "simp-auditd",
+      "version_requirement": ">= 5.1.1 < 6.0.0"
+    },
+    {
       "name": "simp-simpcat",
-      "version_requirement": ">= 5.0.1 < 6.0.0"
+      "version_requirement": ">= 6.0.0 < 7.0.0"
+    },
+    {
+      "name": "simp-rsyslog",
+      "version_requirement": ">= 5.1.1 < 6.0.0"
     },
     {
       "name": "simp-simplib",
-      "version_requirement": ">= 1.3.1 < 2.0.0"
+      "version_requirement": ">= 2.0.0 < 3.0.0"
     }
   ],
   "operatingsystem_support": [
